# cadical_py

./: CMakeLists.txt  Makefile  README.md  ksubset.py  pyproject.toml
examples/: enumerate_model.py  graphs.py  ipasirup-graphs.py  ipasirup-ksubset1.py  ipasirup-ksubset2.py  ksubset.py
src/cadical_py/: __init__.py  _core.cpp  cadical_py.cpp  propagator.py
